<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingLeft="16dp"
    android:paddingRight="16dp">

    <TextView
        android:id="@+id/preset_detail_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="24dp"
        android:paddingBottom="24dp"
        android:text="@string/preset1_name"
        android:textAlignment="center"
        android:textAppearance="?attr/textAppearanceHeadline3" />

    <TextView
        android:id="@+id/preset_detail_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp"
        android:text="@string/preset1_description" />

    <Button
        android:id="@+id/remove_button"
        style="?attr/materialButtonOutlinedStyle"
        android:layout_marginTop="400dp"
        android:layout_width="240dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/delete_this_preset" />

</LinearLayout>